<resources>
    <string name="app_name">Вопрос дня</string>
    <string name="add">Создать</string>
    <string name="account">Профиль</string>
    <string name="mark">Лучшее</string>
    <string name="history">История</string>
    <string name="new_feed">Лента</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="user_profile_background_image_content_description">User Profile Background Image</string>
    <string name="user_profile_image_content_description">User Profile Image</string>
    <string name="sample_user_name">oxxxymiron</string>
    <string name="username_hint">Имя Пользователя</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Пароль</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="existing_button">Войти под существующим аккаунтом</string>
    <string name="already_registered_button"><u>Уже есть аккаунт! Войти.</u></string>
    <string name="signin_button">Войти</string>
    <string name="question_of_the_day_title">Вопрос дня</string>
    <string name="my_answers">Мои ответы</string>
    <string name="new_question_title">Новый вопрос!</string>
</resources>
