<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavenderLight"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:textColor="@color/darkBlue"
        android:textColorHint="@color/darkBlue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/darkBlue"
        android:textColorHint="@color/darkBlue"
        app:layout_constraintLeft_toLeftOf="@+id/editTextUsername"
        app:layout_constraintRight_toRightOf="@+id/editTextUsername"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/darkBlue"
        android:textColorHint="@color/darkBlue"
        app:layout_constraintLeft_toLeftOf="@+id/editTextEmail"
        app:layout_constraintRight_toRightOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="260dp"
        android:background="@drawable/round_gradient_button"
        android:textColor="@color/darkDarkBlue"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="signUpButtonOnClick"
        android:text="@string/register_button"
        app:layout_constraintLeft_toLeftOf="@+id/editTextPassword"
        app:layout_constraintRight_toRightOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <TextView
        android:id="@+id/textViewAlreadySignedUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:textColor="@color/darkBlue"
        android:onClick="presentSignInActivity"
        android:text="@string/already_registered_button"
        app:layout_constraintLeft_toLeftOf="@+id/buttonSignUp"
        app:layout_constraintRight_toRightOf="@+id/buttonSignUp"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignUp" />

</android.support.constraint.ConstraintLayout>
