<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.uluapp.post4like.activities.SignInActivity">

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="@+id/editTextEmail"
        app:layout_constraintRight_toRightOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="signInButtonOnClick"
        android:text="@string/signin_button"
        app:layout_constraintLeft_toLeftOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
</android.support.constraint.ConstraintLayout>
